--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ repositories {
 dependencies {
     compile 'commons-codec:commons-codec:1.10'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.2'
+    // compile 'com.fasterxml.jackson.core:jackson-databind:2.9.2'
     compile 'org.apache.commons:commons-lang3:3.6'
     compile 'com.google.code.gson:gson:2.8.2'
     compile group: 'org.apache.commons', name: 'commons-compress', version: '1.14'
